# TriAxis

./: CMakeLists.txt  README.md
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
src/: CMakeLists.txt  main.cpp
src/Renderer/: CMakeLists.txt  Renderer.cpp  Renderer.h  Window.cpp  Window.h
src/Utils/: CMakeLists.txt  FileUtils.cpp  FileUtils.h
